Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         </div>
                         <div class="rating"><span class="star">★★★★★</span> (4.9)</div>
                     </div>
-                    <a href="https://lynk.id/ajengwahys/lb1AoAw" class="btn-minimal" target="_blank">Lihat Detail ￫</a>
+                    <a href="https://lynk.id/ajengwahys/92zozoypk6n5" class="btn-minimal" target="_blank">Lihat Detail ￫</a>
                 </div>
             </div>
 
@@ -228,7 +228,7 @@
                         </div>
                         <div class="rating"><span class="star">★★★★☆</span> (4.9)</div>
                     </div>
-                    <a href="https://lynk.id/ajengwahys/eeBJpwA" class="btn-minimal" target="_blank">Lihat Detail ￫</a>
+                    <a href="https://lynk.id/ajengwahys/90v9v9pp4jyw" class="btn-minimal" target="_blank">Lihat Detail ￫</a>
                 </div>
             </div>
             
@@ -245,7 +245,7 @@
                         </div>
                         <div class="rating"><span class="star">★★★★★</span> (5.0)</div>
                     </div>
-                    <a href="https://lynk.id/ajengwahys/obVAWPV" class="btn-minimal" target="_blank">Lihat Detail ￫</a>
+                    <a href="https://lynk.id/ajengwahys/33jdjdjk5r67" class="btn-minimal" target="_blank">Lihat Detail ￫</a>
                 </div>
             </div>
 
@@ -262,7 +262,7 @@
                         </div>
                         <div class="rating"><span class="star">★★★★★</span> (5.0)</div>
                     </div>
-                    <a href="https://lynk.id/ajengwahys/6Q51n6P" class="btn-minimal" target="_blank">Lihat Detail ￫</a>
+                    <a href="https://lynk.id/ajengwahys/x59z9zg8qqz2" class="btn-minimal" target="_blank">Lihat Detail ￫</a>
                 </div>
             </div>
 
@@ -271,3 +271,4 @@
 
 </body>
 </html>
+
